--- a/BChessiOS/Base.lproj/Main.storyboard
+++ b/BChessiOS/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,16 +14,49 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="BChessiOS" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC" customClass="ChessView" customModule="BChessiOS" customModuleProvider="target">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="BChess" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MWm-xc-uA9" customClass="ChessView" customModule="BChess" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="146" width="375" height="375"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="MWm-xc-uA9" secondAttribute="height" multiplier="1:1" id="giD-kF-LHs"/>
+                                </constraints>
+                            </view>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1PM-xG-FQ5">
+                                <rect key="frame" x="0.0" y="521" width="375" height="146"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <string key="text">Line 1
+Line 2
+Line 3</string>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="1PM-xG-FQ5" firstAttribute="top" secondItem="MWm-xc-uA9" secondAttribute="bottom" id="d3M-gz-CdN"/>
+                            <constraint firstItem="MWm-xc-uA9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="dXU-KC-ZHe"/>
+                            <constraint firstItem="1PM-xG-FQ5" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="mxT-bA-wpm"/>
+                            <constraint firstItem="MWm-xc-uA9" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="tSM-pj-3JO"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="1PM-xG-FQ5" secondAttribute="bottom" id="tTh-rj-LJ5"/>
+                            <constraint firstItem="MWm-xc-uA9" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="xSs-Gp-pXP"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="1PM-xG-FQ5" secondAttribute="trailing" id="zkO-7M-iLV"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="chessView" destination="MWm-xc-uA9" id="kkY-gS-GIU"/>
+                        <outlet property="infoTextView" destination="1PM-xG-FQ5" id="2MH-2U-h7m"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="117.59999999999999" y="112.89355322338831"/>
         </scene>
     </scenes>
 </document>
