--- a/BChessiOS/Base.lproj/Main.storyboard
+++ b/BChessiOS/Base.lproj/Main.storyboard
@@ -19,6 +19,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="White's Turn" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ope-mA-GtZ">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="138"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MWm-xc-uA9" customClass="ChessView" customModule="BChess" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="146" width="375" height="375"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -29,9 +35,8 @@
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1PM-xG-FQ5">
                                 <rect key="frame" x="0.0" y="521" width="375" height="117.5"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <string key="text">Line 1
-Line 2
-Line 3</string>
+                                <string key="text">Analysis
+With Multiple Lines</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
@@ -49,12 +54,16 @@ Line 3</string>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="top" secondItem="Ope-mA-GtZ" secondAttribute="top" constant="64" id="E6S-8p-XbK"/>
                             <constraint firstItem="dXS-m1-iHG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Hoi-He-eTo"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="dXS-m1-iHG" secondAttribute="bottom" id="PqU-jq-edn"/>
                             <constraint firstItem="dXS-m1-iHG" firstAttribute="top" secondItem="1PM-xG-FQ5" secondAttribute="bottom" constant="8" symbolic="YES" id="VXE-2j-62d"/>
                             <constraint firstItem="1PM-xG-FQ5" firstAttribute="top" secondItem="MWm-xc-uA9" secondAttribute="bottom" id="d3M-gz-CdN"/>
                             <constraint firstItem="MWm-xc-uA9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="dXU-KC-ZHe"/>
+                            <constraint firstItem="Ope-mA-GtZ" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="lV3-LI-oDb"/>
                             <constraint firstItem="1PM-xG-FQ5" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="mxT-bA-wpm"/>
+                            <constraint firstItem="Ope-mA-GtZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="pM7-3V-hRI"/>
+                            <constraint firstItem="MWm-xc-uA9" firstAttribute="top" secondItem="Ope-mA-GtZ" secondAttribute="bottom" constant="8" symbolic="YES" id="sdO-ff-Ssj"/>
                             <constraint firstItem="MWm-xc-uA9" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="tSM-pj-3JO"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="dXS-m1-iHG" secondAttribute="trailing" id="xIs-37-mMK"/>
                             <constraint firstItem="MWm-xc-uA9" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="xSs-Gp-pXP"/>
@@ -67,6 +76,7 @@ Line 3</string>
                         <outlet property="actionsStackView" destination="dXS-m1-iHG" id="J0m-XV-4cJ"/>
                         <outlet property="chessView" destination="MWm-xc-uA9" id="kkY-gS-GIU"/>
                         <outlet property="infoTextView" destination="1PM-xG-FQ5" id="2MH-2U-h7m"/>
+                        <outlet property="upperInfoTextView" destination="Ope-mA-GtZ" id="EIx-Wm-rcB"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
